--- a/src/pages/Auth/auth.css
+++ b/src/pages/Auth/auth.css
@@ -61,7 +61,8 @@
 .auth-header p {
     color: rgba(255, 255, 255, 0.8);
     margin: 0;
-    font-size: 14px;
+    font-size: 13px;
+    text-align: center;
 }
 
 .auth-form {
@@ -80,7 +81,7 @@
     display: block;
     font-size: 14px;
     font-weight: 500;
-    color: white;
+    color: white !important;
     margin-bottom: 8px;
 }
 
@@ -97,30 +98,38 @@
     top: 50%;
     transform: translateY(-50%);
     z-index: 1;
-    color: white;
+    color: #64748B;
+}
+
+input[type="date"] {
+    background-color: rgba(255, 255, 255, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    padding: 10px 12px;
+    border-radius: 8px;
+}
+input[type="date"]::placeholder {
+    color: rgba(255, 255, 255, 0.6);
 }
 
 .form-group input {
     width: 100%;
     padding: 12px 16px 12px 44px;
-    border: 1px solid rgba(255, 255, 255, 0.2);
     border-radius: 8px;
     font-size: 14px;
     transition: all 0.2s ease;
-    background: rgba(255, 255, 255, 0.1);
     color: white;
     box-sizing: border-box;
 }
 
 .form-group input::placeholder {
     color: rgba(255, 255, 255, 0.6);
+    text-align: left;
+    vertical-align: middle;
 }
 
 .form-group input:focus {
     outline: none;
-    border-color: rgba(255, 255, 255, 0.4);
-    box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.1);
-    background: rgba(255, 255, 255, 0.15);
+
 }
 
 .form-group input.error {
@@ -131,11 +140,6 @@
     box-shadow: 0 0 0 3px rgba(239, 68, 68, 0.15);
 }
 
-
-
-.input-container input::placeholder {
-    color: rgba(255, 255, 255, 0.6);
-}
 
 .input-container input:focus {
     outline: none;
@@ -149,7 +153,7 @@
     right: 10px;
     background: none;
     border: none;
-    color: #FFFFFF;
+    color: #64748B;
     cursor: pointer;
     display: flex;
     align-items: center;
