--- a/src/pages/Auth/auth.css
+++ b/src/pages/Auth/auth.css
@@ -163,9 +163,9 @@ input[type="date"]::placeholder {
 
 .form-group input::placeholder {
     color: #333;
-    text-align: left;
+    text-align: center;
     vertical-align: middle;
-    transition: all 0.2s ease; /* Thêm transition cho placeholder */
+    transition: all 0.2s ease;
 }
 
 .form-group input:hover::placeholder {
@@ -189,14 +189,6 @@ input[type="date"]::placeholder {
 .form-group input.error:focus {
     box-shadow: 0 0 0 3px rgba(239, 68, 68, 0.15);
 }
-
-/*.input-container input:focus {*/
-/*    outline: none;*/
-/*    border-color: rgba(255, 255, 255, 0.4);*/
-/*    box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.1);*/
-/*    background: rgba(255, 255, 255, 0.15);*/
-/*}*/
-
 .toggle-password {
     position: absolute;
     right: 10px;
@@ -220,27 +212,7 @@ input[type="date"]::placeholder {
     height: 100%;
 }
 
-.error-message {
-    display: block;
-    color: #EF4444;
-    font-size: 12px;
-    margin-top: 6px;
-}
 
-.error-message.general-error {
-    display: flex;
-    align-items: center;
-    background: rgba(239, 68, 68, 0.2);
-    border: 1px solid rgba(254, 202, 202, 0.3);
-    padding: 10px 12px;
-    border-radius: 8px;
-    margin-bottom: 16px;
-    color: #FECACA;
-}
-
-.error-message.general-error svg {
-    margin-right: 8px;
-}
 
 .form-options {
     display: flex;
